BUGFIX-1 overlap logo, 404 error, Combat Carousel Button fixes (#14)
* BUGFIX-1 overlap logo, 404 error, Combat Carousel Button fixes

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -347,6 +347,23 @@
     display: none;
 }
 
+#controls li[data-control="combat-carousel"] img {
+    opacity: 0;
+}
+
+#controls li[data-control="combat-carousel"]::before{
+    position: absolute;
+    content: " ";
+    width: 32px;
+    height: 32px;
+    left: 8px;
+    top: 8px;
+
+    background-color: #837360;
+    -webkit-mask: url("/modules/combat-carousel/icons/combat-carousel-solid2.svg") no-repeat center;
+    mask: url("/modules/combat-carousel/icons/combat-carousel-solid2.svg") no-repeat center;
+}
+
 /* Firefox old*/
 @-moz-keyframes blink {
     0% {
