--- a/css/rpg-ui.css
+++ b/css/rpg-ui.css
@@ -9,6 +9,10 @@
     left: 22px;
 }
 
+body.compact-mode #logo {
+    display: none;
+}
+
 .hide {
     display: none;
     display: none;
@@ -310,11 +314,6 @@ body.compact-mode > ol.app.control-tools {
 
 #controls li[data-control="combat-carousel"] {
     position: relative;
-}
-
-#controls li[data-control="combat-carousel"] img {
-    position: relative;
-    left: 4px;
 }
 
 #controls li[data-control="combat-carousel"]::after {
